--- a/project-webperf.html
+++ b/project-webperf.html
@@ -51,14 +51,7 @@
 <footer>
   <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
-<script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script>
-  WebFont.load({
-    google: {
-      families: ['Open Sans Condensed:400,700']
-    }
-  });
-</script>
+
 <script>
   (function(w,g){w['GoogleAnalyticsObject']=g;
     w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -69,5 +62,13 @@
 </script>
 <script async src="http://www.google-analytics.com/analytics.js"></script>
 <script async src="dist/js/perfmatters.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Open Sans Condensed:400,700']
+    }
+  });
+</script>
 </body>
 </html>
